style (malevitch): profile pictures no longer stretched

--- a/requirements/malevitch/css/tournament-info.css
+++ b/requirements/malevitch/css/tournament-info.css
@@ -145,6 +145,7 @@
 
 .tournament-info-card-picture img {
 	height: 20px;
+	object-fit: cover;
 }
 
 .tournament-info-card-name {
